# SGVAE

./: .gitignore  README.md  ball_datasets.py  base_class.sub  baseline_classification.py  class_args.txt  class_submit.sub  classification_accuracy.py  cmd_parser.py  dataset_structs.py  exec.sh  infconfig.yaml  inference_main.py  inference_mod.py  inference_training.py  logger.py  losses.py  main.py  networks.py  object_properties.csv  pl_modules.py  plotting.py  property_maps.py  pyproject.toml  requirements.txt  run_inference.sh  run_jobs.sh  run_sgvae.sh  sgvae_args.txt  sgvae_main.py  sgvae_submit.sub  sgvae_training.py  training.py  utils.py  vae_training.py  vaeconfig.yaml
scripts/: cluster_inference.sh  cluster_sgvae.sh
scripts/cluster_utils/: inf_cluster_config.yaml  inf_submit.sub
scripts/local_utils/: inf_config.yaml  sgvae_config.yaml
sgvae/: __init__.py  classification_accuracy.py  cmd_parser.py  dataset_structs.py  logger.py  networks.py  property_maps.py  utils.py
sgvae/inference/: baseline_inference.py  inference_main.py  inference_training.py
sgvae/training/: sgvae_main.py  sgvae_training.py
submit_utils/: inf_args.txt  inf_submit.sub  infconfig.yaml  run_inference.sh  sgvae_args.txt  sgvae_config.yaml  sgvae_submit.sub  vaeconfig.yaml
